NEXT-504 - Refactor sw-page, fix search bar position with scrollbar, remove old sidebar search

--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
@@ -1,5 +1,5 @@
 {% block sw_page %}
-    <div class="sw-page__wrapper">
+    <div class="sw-page">
 
         {% block sw_page_search_bar %}
             <sw-search-bar>
@@ -15,57 +15,60 @@
             </sw-search-bar>
         {% endblock %}
 
-        <div class="sw-page">
-            {% block sw_page_smart_bar %}
-                <div class="sw-page__smart-bar"
-                     :style="{ 'border-bottom-color': pageColor, paddingRight: `${scrollbarOffset}px` }">
+        {% block sw_page_smart_container %}
+            <div class="sw-page__container">
 
-                    {% block sw_page_smart_bar_back_btn %}
-                        <slot name="smart-bar-back">
-                            {% block sw_page_slot_smart_bar_back %}
-                                <router-link :to="{ name: parentRoute }" v-if="parentRoute"
-                                             :style="{ 'color': pageColor }" class="smart-bar__back-btn">
-                                    <sw-icon name="small-arrow-large-left" size="16"/>
-                                    <sw-icon :name="module.icon" v-if="module && module.icon"/>
-                                </router-link>
-                            {% endblock %}
+                {% block sw_page_smart_bar %}
+                    <div class="sw-page__smart-bar"
+                         :style="{ 'border-bottom-color': pageColor, paddingRight: `${scrollbarOffset}px` }">
+
+                        {% block sw_page_smart_bar_back_btn %}
+                            <slot name="smart-bar-back">
+                                {% block sw_page_slot_smart_bar_back %}
+                                    <router-link :to="{ name: parentRoute }" v-if="parentRoute"
+                                                 :style="{ 'color': pageColor }" class="smart-bar__back-btn">
+                                        <sw-icon name="small-arrow-large-left" size="16"></sw-icon>
+                                        <sw-icon :name="module.icon" v-if="module && module.icon"></sw-icon>
+                                    </router-link>
+                                {% endblock %}
+                            </slot>
+                        {% endblock %}
+
+                        {% block sw_page_smart_bar_content %}
+                            <div class="smart-bar__content">
+
+                                {% block sw_page_smart_bar_content_header %}
+                                    <div class="smart-bar__header">
+                                        <slot name="smart-bar-header">
+                                            {% block sw_page_slot_smart_bar_header %}
+                                                <h2 v-if="module && module.name">
+                                                    {{ module.name }}
+                                                </h2>
+                                            {% endblock %}
+                                        </slot>
+                                    </div>
+                                {% endblock %}
+
+                                {% block sw_page_smart_bar_content_actions %}
+                                    <div class="smart-bar__actions">
+                                        <slot name="smart-bar-actions">
+                                            {% block sw_page_slot_smart_bar_actions %}{% endblock %}
+                                        </slot>
+                                    </div>
+                                {% endblock %}
+                            </div>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
+
+                {% block sw_page_content %}
+                    <div class="sw-page__content" ref="swPageContent">
+                        <slot name="content">
+                            {% block sw_page_slot_content %}{% endblock %}
                         </slot>
-                    {% endblock %}
-
-                    {% block sw_page_smart_bar_content %}
-                        <div class="smart-bar__content">
-
-                            {% block sw_page_smart_bar_content_header %}
-                                <div class="smart-bar__header">
-                                    <slot name="smart-bar-header">
-                                        {% block sw_page_slot_smart_bar_header %}
-                                            <h2 v-if="module && module.name">
-                                                {{ module.name }}
-                                            </h2>
-                                        {% endblock %}
-                                    </slot>
-                                </div>
-                            {% endblock %}
-
-                            {% block sw_page_smart_bar_content_actions %}
-                                <div class="smart-bar__actions">
-                                    <slot name="smart-bar-actions">
-                                        {% block sw_page_slot_smart_bar_actions %}{% endblock %}
-                                    </slot>
-                                </div>
-                            {% endblock %}
-                        </div>
-                    {% endblock %}
-                </div>
-            {% endblock %}
-
-            {% block sw_page_content %}
-                <div class="sw-page__content" ref="swPageContent">
-                    <slot name="content">
-                        {% block sw_page_slot_content %}{% endblock %}
-                    </slot>
-                </div>
-            {% endblock %}
-        </div>
+                    </div>
+                {% endblock %}
+            </div>
+        {% endblock %}
     </div>
 {% endblock %}
