--- a/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.less
+++ b/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.less
@@ -10,7 +10,8 @@
     position: relative;
     display: block;
     padding: 0;
-    margin-bottom: 30px;
+    max-width: 800px;
+    margin: 0 auto 40px auto;
     height: 48px;
     background-color: @sw-tabs-background-color;
     border-radius: @sw-tabs-border-radius;
