--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
@@ -5,4 +5,21 @@
     position: absolute;
     overflow-x: hidden;
     overflow-y: auto;
+
+    @media screen and (max-width: 1360px) {
+        padding: 15px;
+
+        .sw-tabs {
+            max-width: 770px;
+            margin-bottom: 30px;
+        }
+
+        .sw-card {
+            max-width: 770px;
+        }
+
+        .sw-card--large {
+            max-width: 100%;
+        }
+    }
 }
