--- a/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.less
+++ b/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.less
@@ -4,6 +4,11 @@
     .sw-catalog-detail__info {
         max-width: 800px;
         margin: 0 auto 40px auto;
+
+        @media screen and (max-width: 1360px) {
+            max-width: 770px;
+            margin-bottom: 30px;
+        }
     }
 
     .sw-catalog-detail__intro {
