--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
@@ -2,7 +2,7 @@
     <div class="sw-customer-detail-addresses">
 
         {% block sw_customer_detail_addresses %}
-            <sw-card :isLoading="customerAddressStore.isLoading">
+            <sw-card :isLoading="customerAddressStore.isLoading" :large="true">
 
                 {% block sw_customer_detail_addresses_add_button %}
                     <div class="sw-customer-detail-addresses__toolbar">
