--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.less
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.less
@@ -48,12 +48,20 @@
         }
     }
 
+    @media screen and (max-width: 500px) {
+        &.sw-modal--default .sw-modal__dialog {
+            margin: 0;
+            border-radius: 0;
+        }
+
+        .sw-modal__body {
+            overflow-x: hidden;
+            overflow-y: auto;
+        }
+    }
+
     &.sw-modal--small .sw-modal__dialog {
         max-width: 450px;
-
-        @media screen and (max-width: 490px) {
-            margin: 20px;
-        }
     }
 
     &.sw-modal--full .sw-modal__dialog {
