--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -54,7 +54,7 @@
                     <router-view :customer="customer"
                                  :customerName="customerName"
                                  :addresses="addresses"
-                                 :touchpoints="touchpoints"
+                                 :salesChannels="salesChannels"
                                  :customerGroups="customerGroups"
                                  :paymentMethods="paymentMethods"
                                  :countries="countries"
