--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -42,7 +42,7 @@
                                 <dt>{{ $tc('sw-order.detailBase.labelOrderDate') }}</dt>
                                 <dd>{{ order.date | date }}</dd>
                                 <dt>{{ $tc('sw-order.detailBase.labelSalesChanel') }}</dt>
-                                <dd>{{ order.touchpoint.name }}</dd>
+                                <dd>{{ order.salesChannel.name }}</dd>
                             </sw-description-list>
                         {% endblock %}
 
