NEXT-477 - Refactored data handling

--- a/Resources/administration/src/app/component/base/sw-button/sw-button.less
+++ b/Resources/administration/src/app/component/base/sw-button/sw-button.less
@@ -32,6 +32,7 @@
     vertical-align: middle;
     text-decoration: none;
     cursor: pointer;
+    user-select: none;
     margin: 0;
 
     .sw-button__content {
