--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.less
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.less
@@ -35,6 +35,7 @@
         line-height: 24px;
         display: grid;
         grid-template-columns: 30px 24px;
+        align-items: center;
         position: absolute;
         top: 22px;
         left: 20px;
