--- a/Resources/administration/src/module/sw-customer/view/sw-customer-create-base/sw-customer-create-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-create-base/sw-customer-create-base.html.twig
@@ -4,6 +4,6 @@
     <sw-card :title="$tc('sw-customer.detailBase.labelAddressesCard')"
              :isLoading="customer.isLoading"
              key="address">
-        <sw-customer-address-form :address="customer.addresses[0]" :countries="countries"></sw-customer-address-form>
+        <sw-customer-address-form :address="defaultAddress" :countries="countries"></sw-customer-address-form>
     </sw-card>
 {% endblock %}
