--- a/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -23,7 +23,7 @@
                 {% endblock %}
             </sw-container>
 
-            <sw-container grid="1fr 1fr 1fr 1fr" gap="0px 30px">
+            <sw-container grid="1fr 1fr" gap="0px 30px">
                 {% block sw_product_settings_form_width_field %}
                     <sw-field type="number"
                               :label="$tc('sw-product.settingsForm.labelWidth')"
