NEXT-457 - Collapse menu on smaller viewports, experiment with detail page responsiveness (W.I.P.)

--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
@@ -6,6 +6,7 @@
 @sw-multi-select-color-background:                @color-white;
 @sw-multi-select-color-label:                     @color-kashmir;
 @sw-multi-select-selection-item-color-text:       @color-gutenberg;
+@sw-multi-select-font-family:                     @font-family-default;
 @sw-multi-select-selection-item-color-background: darken(@color-light-gray, 5%);
 @sw-multi-select-input-color-text:                @color-gutenberg;
 @sw-multi-select-input-color-placeholder:         lighten(@color-gutenberg, 25%);
@@ -120,6 +121,7 @@
         border: 0 none;
         outline: none;
         color: @sw-multi-select-input-color-text;
+        font-family: @sw-multi-select-font-family;
         background: 0 none;
 
         &::placeholder {
