NEXT-577 - Renamed mediaManager to media in the code and the snippets

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -5,18 +5,18 @@
 @color-text-quickaction-hover:       @color-shopware-blue;
 @color-background-quickaction-hover: @color-cadet-blue;
 
-.sw-mediamanager-quickinfo {
+.sw-media-quickinfo {
 
-    .sw-mediamanager-quickinfo-collapse {
+    .sw-media-quickinfo-collapse {
         margin: 0 -25px;
     }
 
-    .sw-mediamanager-quickinfo__collapse-content {
+    .sw-media-quickinfo__collapse-content {
         padding: 0 25px;
         margin-top: 16px;
     }
 
-    .sw-mediamanager-quickinfo__two-columns {
+    .sw-media-quickinfo__two-columns {
         display: grid;
         grid-template-columns: 50% 50%;
     }
@@ -26,7 +26,7 @@
         text-decoration: none;
     }
 
-    .sw-mediamanager-quickinfo__quickaction {
+    .sw-media-quickinfo__quickaction {
         cursor: pointer;
         border-radius: 4px;
         margin-bottom: 16px;
@@ -36,12 +36,12 @@
         }
     }
 
-    .sw-mediamanager-quickinfo__quickactions-icon {
+    .sw-media-quickinfo__quickactions-icon {
         color: @color-icon-quickaction;
         margin-right: 20px;
     }
 
-    .sw-mediamanager-quickinfo__preview {
+    .sw-media-quickinfo__preview {
         position: relative;
         margin: 10px 0;
         width: 100%;
@@ -49,13 +49,13 @@
         border-radius: @border-radius-default;
     }
 
-    .sw-mediamanager-quickinfo__preview:before {
+    .sw-media-quickinfo__preview:before {
         content: "";
         display: block;
         padding-top: 75%;
     }
 
-    .sw-mediamanager-quickinfo__image {
+    .sw-media-quickinfo__image {
         max-width: 100%;
         max-height: 100%;
         position: absolute;
@@ -64,18 +64,18 @@
         transform: translate(-50%, -50%);
     }
 
-    .sw-mediamanager-quickinfo__metadata-grid {
+    .sw-media-quickinfo__metadata-grid {
         margin: 10px;
         display: grid;
         grid-template-columns: 50% 50%;
     }
 
-    .sw-mediamanager-quickinfo__metadata-description {
+    .sw-media-quickinfo__metadata-description {
         color: @color-gutenberg;
         font-weight: bold;
     }
 
-    .sw-mediamanager-quickinfo__metadata-value {
+    .sw-media-quickinfo__metadata-value {
         .truncate();
     }
 }
