--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.less
@@ -1,19 +1,19 @@
 @import "~less/variables";
 
-.sw-mediamanager-sidebar {
+.sw-media-sidebar {
     height: 100%;
 
-    .sw-mediamanager-sidebar__item-container {
+    .sw-media-sidebar__item-container {
         display: grid;
         height: 100%;
         grid-template-columns: 64px;
         grid-template-rows: 50% 50%;
 
-        .sw-mediamanager-sidebar__items-top {
+        .sw-media-sidebar__items-top {
             align-self: start;
         }
 
-        .sw-mediamanager-sidebar__items-bottom {
+        .sw-media-sidebar__items-bottom {
             align-self: end;
         }
     }
