--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
@@ -1,7 +1,7 @@
 @import "~less/variables";
 
-.sw-mediamanager-index {
-    .sw-mediamanager-index__page {
+.sw-media-index {
+    .sw-media-index__page {
         display: grid;
         position: absolute;
         height: 100%;
@@ -9,21 +9,21 @@
         grid-template-columns: auto 64px;
     }
 
-    .sw-mediamanager-index__content {
+    .sw-media-index__content {
         padding: 0 20px;
         justify-self: stretch;
         overflow-x: hidden;
         overflow-y: auto;
     }
 
-    .sw-mediamanager-index__divider {
+    .sw-media-index__divider {
         border: 0;
         height: 1px;
         background: @color-steam-cloud;
         margin: 10px 0;
     }
 
-    .sw-mediamanager-index__sidebar{
+    .sw-media-index__sidebar{
         width: 64px;
     }
 }
