--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -1,31 +1,31 @@
-{% block sw_mediamanager_catalog %}
-    <sw-page class="sw-mediamanager-catalog">
+{% block sw_media_catalog %}
+    <sw-page class="sw-media-catalog">
         <template slot="content">
-            {% block sw_mediamanager_catalog_page_content %}
-                <div class="sw-mediamanager-catalog__page-content">
-                    {% block sw_mediamanager_catalog_content_container %}
-                        <div class="sw-mediamanager-catalog__content-container">
-                            {% block sw_mediamanager_catalog_content %}
-                                <div class="sw-mediamanager-catalog__content">
-                                    {% block sw_mediamanager_catalog_display_options_bar %}
-                                        <div class="sw-mediamanager-catalog__display-options-bar">
+            {% block sw_media_catalog_page_content %}
+                <div class="sw-media-catalog__page-content">
+                    {% block sw_media_catalog_content_container %}
+                        <div class="sw-media-catalog__content-container">
+                            {% block sw_media_catalog_content %}
+                                <div class="sw-media-catalog__content">
+                                    {% block sw_media_catalog_display_options_bar %}
+                                        <div class="sw-media-catalog__display-options-bar">
                                         </div>
                                     {% endblock %}
 
-                                    {% block sw_mediamanager_catalog_media_grid %}
+                                    {% block sw_media_catalog_media_grid %}
                                         <sw-media-grid
-                                            class="sw-mediamanager-catalog__media-grid"
+                                            class="sw-media-catalog__media-grid"
                                             :previewType="previewType"
                                             previewComponent="sw-media-grid-media-item"
                                             :selectable="true"
                                             :editable="true"
                                             :items="mediaItems"
                                             ref="mediaGrid"
-                                            v-on="mediamanagerMediaGridListener">
+                                            v-on="mediaMediaGridListener">
                                         </sw-media-grid>
                                     {% endblock %}
 
-                                    {% block sw_mediamanager_catalog_pagination %}
+                                    {% block sw_media_catalog_pagination %}
                                     <sw-pagination
                                         :offset="offset"
                                         :limit="limit"
@@ -38,12 +38,12 @@
                         </div>
                     {% endblock %}
 
-                    {% block sw_mediamanager_catalog_sidebar %}
-                        <div class="sw-mediamanager-catalog__sidebar">
-                            <sw-mediamanager-sidebar
+                    {% block sw_media_catalog_sidebar %}
+                        <div class="sw-media-catalog__sidebar">
+                            <sw-media-sidebar
                                     :item="lastSelectedItem"
-                                    v-on="mediamanagerSidebarListener"
-                            ></sw-mediamanager-sidebar>
+                                    v-on="mediaSidebarListener"
+                            ></sw-media-sidebar>
                         </div>
                     {% endblock %}
                 </div>
