--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -1,7 +1,7 @@
 @import "~less/variables";
 
-.sw-mediamanager-catalog {
-    .sw-mediamanager-catalog__page-content {
+.sw-media-catalog {
+    .sw-media-catalog__page-content {
         display: grid;
         position: absolute;
         height: 100%;
@@ -9,13 +9,13 @@
         grid-template-columns: auto 64px;
     }
 
-    .sw-mediamanager-catalog__content-container {
+    .sw-media-catalog__content-container {
         height: 100%;
         width: 100%;
         position: relative;
     }
 
-    .sw-mediamanager-catalog__content {
+    .sw-media-catalog__content {
         display: grid;
         grid-template-rows: 70px auto 64px;
         position:absolute;
@@ -23,7 +23,7 @@
         width: 100%;
     }
 
-    .sw-mediamanager-catalog__display-options-bar {
+    .sw-media-catalog__display-options-bar {
         display: grid;
         width: 100%;
         height: 70px;
@@ -31,14 +31,14 @@
         justify-items: end;
     }
 
-    .sw-mediamanager-catalog__media-grid {
+    .sw-media-catalog__media-grid {
         width: 100%;
         justify-self: stretch;
         overflow-y: auto;
         overflow-x: hidden;
     }
 
-    .sw-mediamanager-catalog__sidebar {
+    .sw-media-catalog__sidebar {
         width: 64px;
     }
 }
