NEXT-445 - Change paging method in Administration

--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -188,7 +188,7 @@
 
                             <template slot="pagination">
                                 {% block sw_customer_list_grid_pagination %}
-                                    <sw-pagination :offset="offset"
+                                    <sw-pagination :page="page"
                                                    :limit="limit"
                                                    :total="total"
                                                    :total-visible="7"
