--- a/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
+++ b/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
@@ -179,7 +179,7 @@
                                             {% endblock %}
                                             <template slot="pagination">
                                                 {% block sw_integration_list_grid_pagination %}
-                                                    <sw-pagination :offset="offset"
+                                                    <sw-pagination :page="page"
                                                                    :limit="limit"
                                                                    :total="total"
                                                                    :total-visible="7"
