--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -152,7 +152,7 @@
 
                             <template slot="pagination">
                                 {% block sw_manufacturer_list_grid_pagination %}
-                                    <sw-pagination :offset="offset"
+                                    <sw-pagination :page="page"
                                                    :limit="limit"
                                                    :total="total"
                                                    :total-visible="7"
