--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -27,7 +27,7 @@
 
                                     {% block sw_media_catalog_pagination %}
                                     <sw-pagination
-                                        :offset="offset"
+                                        :page="page"
                                         :limit="limit"
                                         :total="total"
                                         @page-change="onPageChange">
