--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -156,7 +156,7 @@
 
                                 <template slot="pagination">
                                     {% block sw_order_list_grid_pagination %}
-                                        <sw-pagination :offset="offset"
+                                        <sw-pagination :page="page"
                                                        :limit="limit"
                                                        :total="total"
                                                        :total-visible="7"
