--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -191,7 +191,7 @@
 
                                 <template slot="pagination">
                                     {% block sw_product_list_grid_pagination %}
-                                        <sw-pagination :offset="offset"
+                                        <sw-pagination :page="page"
                                                        :limit="limit"
                                                        :total="total"
                                                        :total-visible="7"
