NEXT-579 Updated icons to the new revision

--- a/Resources/administration/src/module/sw-settings-wrapper/component/sw-settings-wrapper-item/sw-settings-wrapper-item.less
+++ b/Resources/administration/src/module/sw-settings-wrapper/component/sw-settings-wrapper-item/sw-settings-wrapper-item.less
@@ -12,10 +12,11 @@
     padding: 24px;
     text-align: center;
     transition: box-shadow 0.3s ease-in-out;
+    border-radius: 2px;
 
     &:hover {
         color: @sw-settings-wrapper-item-hover-text-color;
-        box-shadow: 0 0 5px 0 @color-gutenberg;
+        box-shadow: 0 1px 6px 0 rgba(120, 138, 155, 0.3);
     }
 
     .sw-settings-wrapper-item__icon {
