--- a/Resources/administration/src/module/sw-settings-wrapper/page/sw-settings-wrapper-index/sw-settings-wrapper-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-wrapper/page/sw-settings-wrapper-index/sw-settings-wrapper-index.html.twig
@@ -10,7 +10,7 @@
         {% block sw_settings_wrapper_content %}
             <sw-card-view slot="content">
                 {% block sw_settings_wrapper_content_card %}
-                    <sw-card>
+                    <sw-card class="sw-settings-wrapper__card">
                         <slot>{% block sw_settings_wrapper_content_card_slot_default %}{% endblock %}</slot>
                     </sw-card>
                 {% endblock %}
